--- a/teams-manifest/manifest.json
+++ b/teams-manifest/manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.16/MicrosoftTeams.schema.json",
   "manifestVersion": "1.16",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "id": "31fdb9a2-1c79-4b8c-ae3a-799b41baea1e",
   "packageName": "com.neo.assistant",
   "developer": {
@@ -12,11 +12,11 @@
   },
   "name": {
     "short": "NEO",
-    "full": "NEO Assistant"
+    "full": "NEO Assistant IA"
   },
   "description": {
-    "short": "Assistant IA",
-    "full": "Assistant IA pour Microsoft 365"
+    "short": "Assistant IA pour Microsoft 365",
+    "full": "NEO est un assistant IA qui vous aide à gérer vos emails, calendrier, Teams et plus encore."
   },
   "icons": {
     "outline": "outline.png",
@@ -28,9 +28,37 @@
       "botId": "31fdb9a2-1c79-4b8c-ae3a-799b41baea1e",
       "scopes": ["personal", "team", "groupChat"],
       "supportsFiles": false,
-      "isNotificationOnly": false
+      "isNotificationOnly": false,
+      "supportsCalling": false,
+      "supportsVideo": false,
+      "commandLists": [
+        {
+          "scopes": ["personal", "team", "groupChat"],
+          "commands": [
+            {
+              "title": "aide",
+              "description": "Affiche l'aide et les commandes disponibles"
+            },
+            {
+              "title": "calendrier",
+              "description": "Affiche vos prochains événements"
+            },
+            {
+              "title": "emails",
+              "description": "Gère vos emails"
+            }
+          ]
+        }
+      ]
     }
   ],
   "permissions": ["identity", "messageTeamMembers"],
-  "validDomains": ["microsoft-connect.onrender.com"]
+  "validDomains": [
+    "microsoft-connect.onrender.com",
+    "*.microsoft-connect.onrender.com"
+  ],
+  "webApplicationInfo": {
+    "id": "31fdb9a2-1c79-4b8c-ae3a-799b41baea1e",
+    "resource": "api://microsoft-connect.onrender.com/31fdb9a2-1c79-4b8c-ae3a-799b41baea1e"
+  }
 }
